# inverted-pendulum-control

./: .gitignore  .gitmodules  CMakeLists.txt  Constants.cpp  Constants.hpp  Makefile  README.md  constants.h  constants.hpp  feedback.csv  install.sh  pythonRequirements.txt  stabilizer.cpp  test.sh  test_feedback.cpp  test_feedback.sh  testdetached.sh
doc/: README.md
documentazione/circuito/: circuito.fzz
robot-utils/: RobotFeedback.py  simulateRobot.py  simulate_robot.py  testRobotSimulator.py
robotServerTest/: robotlistening.py
simulazione/: schemaSimulink.slx  simulazione.mlx
src/: Makefile  constants.h  encoder_utils.pyx  main.cpp  rotary_encoder.py  setup.py  test.py
src/arduino/getEncoderData/: getEncoderData.ino
src/controller/: FeedbackController.cpp  FeedbackController.hpp
src/csvlogger/: CsvLogger.cpp  CsvLogger.hpp
src/cythontest/: cythontest.pyx
src/encoder/: Encoder.cpp  Encoder.hpp  encoder.py  rotary_encoder.py  test.py
src/encoder/rotary_encoder/: rotary_encoder.cpp  rotary_encoder.hpp
src/lcd/: LCD.cpp  LCD.hpp
src/raspberry/: rotary_encoder.py  test.py
src/robot/: Robot.cpp  Robot.hpp
src/robot/RobotManaging/: CodeHandler.cpp  CodeHandler.hpp  RobotController.cpp  RobotController.hpp  imports.hpp
src/robot/mecawrapper/: mecawrapper.pyx
src/robotServer/: robotlistening.py
src/timer/: Timer.cpp  Timer.hpp
src/timer/timerStats/: TimerStats.cpp  TimerStats.hpp
test/: test-caduta-libera.sh  test-controllo.sh  test-feedback-posa.sh  test-onda-quadra.sh  test_caduta_libera.cpp  test_controllo.cpp  test_feedback_posa.cpp  test_onda_quadra.cpp
test/robot-simulator/: simulate_robot.py
